--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
-<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<!-- <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"> -->
+<html>
   <head>
-    <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+    <!-- <meta content="text/html; charset=utf-8" http-equiv="Content-Type"> -->
     <title><%= Settings.product_name %></title>
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "application" %>
+    <%= csrf_meta_tags %>
+    <%= render 'layouts/shim' %>
   </head>
-  <!--[if lt IE 9 ]><body class="lt-ie9"><![endif]-->
-  <!--[if (gt IE 9)|!(IE)]><!--> <body><!--<![endif]-->
+
+  <body>
     <%= render 'preorder/header' %>
-    <%= yield %>
+
+    <div class="container-fluid">
+      <!-- <div class="row"> -->
+        <!-- <div class=".col-md-12"> -->
+          <%= yield %>
+        <!-- </div> -->
+      <!-- </div> -->
+      
+    </div>
+
     <%= render 'preorder/footer' %>
   </body>
 </html>
