--- a/app/views/preorder/_header.html.erb
+++ b/app/views/preorder/_header.html.erb
@@ -1,6 +1,25 @@
-<div id="header">
-  <div class="wrapper clearfix">
-  <a href="http://fb.com/skihlz"><img src="http://WHOmentors.com/images/skihlzlogosmall.png"></a>
+
+<div class="navbar navbar-fixed-top" role="navigation">
+  <div class="navbar-inner">
+  <div class="container-fluid">
+  <%= link_to image_tag("http://WHOmentors.com/images/skihlzlogosmall.png", width: "50%", height: "80%", alt: "skihlz logo"), "http://fb.com/skihlz", id: "logo" %>
+    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </a>
+    <!-- <div id="header"> -->
+      <!-- <div class="wrapper clearfix"> -->
+      <!-- <a href="http://fb.com/skihlz"><img src="http://WHOmentors.com/images/skihlzlogosmall.png"></a> -->
+      <!-- </div> -->
+    <!-- </div> -->
+    <div class="nav-collapse pull-right">
+      <ul class="nav">
+        <li><%= link_to "Learn", "#" %></li>
+        <li><%= link_to "Discover" %></li>
+        <li><%= link_to "Start a Campaign" %></li>
+      </ul>
+    </div>
   </div>
 </div>
-
+</div>
