--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,11 @@
     <div class="container-fluid">
       <!-- <div class="row"> -->
         <!-- <div class=".col-md-12"> -->
+        <!-- flash message -->
+        <% flash.each do |name, msg| %>
+          <%= content_tag :div, msg, id: "flash#{name}" %>
+        <% end %>
+        
           <%= yield %>
         <!-- </div> -->
       <!-- </div> -->
