--- a/app/views/preorder/_header.html.erb
+++ b/app/views/preorder/_header.html.erb
@@ -1,8 +1,8 @@
 
 <div class="navbar navbar-fixed-top" role="navigation">
   <div class="navbar-inner">
-  <div class="container-fluid">
-  <%= link_to image_tag("http://WHOmentors.com/images/skihlzlogosmall.png", width: "50%", height: "80%", alt: "skihlz logo"), "http://fb.com/skihlz", id: "logo" %>
+  <div class="container">
+  <%= link_to image_tag("http://WHOmentors.com/images/skihlzlogosmall.png", width: "400px", height: "550px", alt: "skihlz logo"), "http://fb.com/skihlz", id: "logo" %>
     <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
@@ -18,6 +18,23 @@
         <li><%= link_to "Learn", "#" %></li>
         <li><%= link_to "Discover" %></li>
         <li><%= link_to "Start a Campaign" %></li>
+
+        <% if user_signed_in? %>
+          <li id="fat-menu" class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <strong><%= current_user.email %><b class="caret"></b></strong>
+            
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
+              <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to 'Sign up', new_user_registration_path %></li>
+          <li><%= link_to 'Login', new_user_session_path %></li>
+        <% end %>
+
       </ul>
     </div>
   </div>
