finish alt signin with fb and twitter

--- a/app/views/preorder/_header.html.erb
+++ b/app/views/preorder/_header.html.erb
@@ -21,7 +21,7 @@
 
         <% if user_signed_in? %>
           <li id="fat-menu" class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <a href="#" data-toggle="dropdown">
               <strong><%= current_user.email %><b class="caret"></b></strong>
             
             </a>
