--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,7 +12,7 @@
  *= require bootstrap_and_overrides
  *= require reset
  *= require main
- *= require jquery.ui.all
+ *= require jquery-ui
  */
 .hidden
 {
